<resources>

    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_feed">Global Feed</string>
    <string name="action_logout">Logout</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_auth">Login / Signup</string>
    <string name="menu_settings">Settings</string>
    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="settings_name">Your Settings</string>
    <string name="connection_error">Unable to connect with the server. Check your internet connection and try again.</string>
    <string name="app_name_bio">A place to share your knowledge</string>
    <string name="connection_lost">Connection Error</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="new_article">New Article</string>

</resources>
