<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="io.realworld.android.ui.feed.GlobalFeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_globalFeed_openArticle"
            app:destination="@id/nav_article"
            app:popUpTo="@id/nav_feed" />
        <argument
            android:name="@string/arg_article_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_feed"
        android:name="io.realworld.android.ui.feed.MyFeedFragment"
        android:label="@string/menu_my_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_myFeed_openArticle"
            app:destination="@id/nav_article"
            app:popUpTo="@id/nav_my_feed">
            <argument
                android:name="@string/arg_article_id"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_myFeed_NewArticle"
            app:destination="@id/nav_new_article"
            app:popUpTo="@id/nav_my_feed" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.realworld.android.ui.setting.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_auth"
        android:name="io.realworld.android.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_article"
        android:name="io.realworld.android.ui.articles.ArticlesFragment"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_new_article"
        android:label="@string/new_article"
        android:name="io.realworld.android.ui.articles.NewArticleFragment"
        tools:layout="@layout/fragment_user_artcle" />

</navigation>