<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_web_bold"
            android:text="@string/app_name"
            android:textColor="@color/conduit_green"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_web_bold"
            android:text="@string/app_name_bio"
            android:textColor="@color/conduit_green"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connection_error_msg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/conduit_green"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="invisible">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_web_bold"
            android:text="@string/connection_lost"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/connection_error"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/try_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/try_again" />
    </LinearLayout>

</RelativeLayout>